--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "body-parser": "^1.17.2",
     "chai": "^4.0.2",
     "chai-http": "^3.0.0",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "jshint": "^2.9.5",
+    "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "mocha": "^3.4.2",
     "pg": "^6.4.0"
