--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "mocha": "^3.4.2",
-    "pg": "^6.4.0"
+    "pg": "^6.4.0",
+    "sqlite3": "^3.1.8"
   }
 }
