--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "byob",
   "version": "1.0.0",
-  "description": "",
+  "description": "byob",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +20,14 @@
     "mocha": "^3.4.2",
     "pg": "^6.4.0",
     "sqlite3": "^3.1.8"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
+    "nodemon": "^1.11.0"
   }
 }
