--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "byob",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/routes.spec.js",
+    "start": "nodemon server.js",
+    "lint": "./node_modules/.bin/eslint ./"
   },
   "author": "",
   "license": "ISC",
