--- a/circle.yml
+++ b/circle.yml
@@ -6,3 +6,9 @@ machine:
 
   environment:
     DATABASE_URL: postgresql://ubuntu:@127.0.0.1:5432/circle_test
+
+deployment:
+  production:
+    branch: master
+    heroku:
+      appname: build-your-own-backend
